- Fix the alignement of the emojis on the grid - Give the focus to the textarea when a emoji is inserted

--- a/app/widgets/Chat/chat.css
+++ b/app/widgets/Chat/chat.css
@@ -45,7 +45,9 @@
 }
 
 table.emojis td {
-    padding: 1rem;
+    width: 10%;
+    text-align: center;
+    padding: 1rem 0;
 }
 
 #chat_widget .emojis_open:hover,
